--- a/front-end-react/package.json
+++ b/front-end-react/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "react-client",
+  "name": "front-end-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^24.0.13",
-    "@types/node": "^12.0.7",
-    "@types/react": "^16.8.19",
-    "@types/react-dom": "^16.8.4",
+    "@types/jest": "24.0.13",
+    "@types/node": "12.0.7",
+    "@types/react": "16.8.19",
+    "@types/react-dom": "16.8.4",
     "antd": "^3.19.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "typescript": "^3.5.1"
+    "typescript": "3.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
