--- a/front-end-react/package.json
+++ b/front-end-react/package.json
@@ -7,6 +7,7 @@
     "@types/node": "12.0.7",
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
+    "@types/react-router-dom": "^4.3.3",
     "antd": "^3.19.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
