--- a/front-end-react/package.json
+++ b/front-end-react/package.json
@@ -10,6 +10,7 @@
     "@types/react-redux": "^7.1.0",
     "@types/react-router-dom": "^4.3.3",
     "antd": "^3.19.2",
+    "axios": "^0.19.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
