--- a/front-end-react/package.json
+++ b/front-end-react/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/classnames": "^2.2.8",
     "@types/jest": "24.0.13",
     "@types/node": "12.0.7",
     "@types/react": "16.8.19",
@@ -11,6 +12,7 @@
     "@types/react-router-dom": "^4.3.3",
     "antd": "^3.19.2",
     "axios": "^0.19.0",
+    "classnames": "^2.2.6",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
