--- a/ppmtool/src/main/resources/application.properties
+++ b/ppmtool/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=password
 
 # Show or not log for each sql query
-spring.jpa.show-sql = true
+# spring.jpa.show-sql = true
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
